# Phibes

./: .flake8  .gitignore  .phibes.cfg  Makefile  Pipfile  README.md  cli.py  pipenv_list_scripts.py  ppp.py  pyproject.toml  pytest.ini  requirements.txt  runtests.sh  setup.cfg  setup.py  test.py
.github/workflows/: main.yml
cli/: example.py  run.py
lib/: config.py  lastpass.py  locker.py  privacy.py  secret.py  utils.py
phibes/: README.md  cli_lib.py  phibes-admin.py  phibes-noun.py  phibes.py  phibes_cli.py  pp-admin.py  pp-config.json  ppp.py  requirements.txt  text_views.py  util.py
phibes/cli/: __init__.py  cli_config.py  command_base.py  commands.py  errors.py  handlers.py  lib.py  options.py
phibes/crypto/: __init__.py  crypt_aes256ctr_sha256.py  crypt_aes_ctr_sha.py  crypt_aes_ctr_sha256.py  crypt_ifc.py  crypt_plain_plain.py  encrypt_aes.py  factory.py  hash_pbkdf2.py
phibes/lib/: __init__.py  config.py  crypto.py  errors.py  item.py  locker.py  phibes_file.py  represent.py  schema.py  secret.py  tag.py  template.py  utils.py
phibes/model/: __init__.py  item.py  locker.py  model.py  schema.py  secret.py  tag.py  template.py
phibes/schema/: tag.json
phibes/storage/: file_storage.py  memory_storage.py  storage_impl.py
privacy_playground/: README.md  cli_lib.py  pp-admin.py  pp-noun.py  ppp.py  private_notes.md  pytest.ini  util.py
privacy_playground/cli/: item.py  locker.py  secret.py  utils.py
privacy_playground/lib/: config.py  crypt_file_wrap.py  crypt_impl.py  crypto.py  item.py  locker.py  phibes_file.py  schema.py  secret.py  tag.py  template.py  utils.py
tests/: conftest.py  phibes-config-other.json  phibes-config.json  test_back_compat.py  test_nothing.py  test_phibes.py  test_phibes_cli.py  test_ppp.py  test_views.py
tests/cli/: click_test_helpers.py  test_create_config.py  test_create_item.py  test_create_locker.py  test_delete_item.py  test_delete_locker.py  test_edit_item.py  test_get_item.py  test_get_locker.py  test_list_items.py  test_update_config.py
tests/lib/: locker_helper.py  test_config.py  test_crypt_impl.py  test_crypto.py  test_helpers.py  test_item.py  test_locker.py  test_tag.py  (+5 more)
(+306 files in other folders)
