[tool.poetry]
name = "phibes"
version = "0.1.0"
description = "Phibes is a utility to keep your secrets in an encrypted locker"
authors = ["Glen Smith <github@smithsrock.com>"]
license = "GNU LESSER GENERAL PUBLIC LICENSE Version 2.1"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pycryptodomex = "^3.9.9"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-datadir-ng = "^1.1.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
