[metadata]
name = Phibes
version = 0.0.1
author = Glen R Smith
author_email = phibes@smithsrock.com
description = A basic encryption utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlenRSmith/Phibes
license = LGPLv2+
license-file = LICENSE
platform = any
keywords = security, encryption
project_urls =
    Bug Tracker = https://github.com/GlenRSmith/Phibes/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Security :: Cryptography

[options]
zip_safe = false
include_package_data = false
python_requires = >=3.8
install_requires =
    click>=7.1.2
    pycryptodomex==3.10.1
package_dir =
    = src
packages=find:

[options.packages.find]
where=src
include=phibes*

[options.entry_points]
console_scripts =
    phibes = phibes.cli.scripts:anon_lockers
    phibesplus = phibes.cli.scripts:named_lockers

[options.extras_require]
develop =
    flake8>=3.9.0
    pytest>=6.2.2
    pytest-datadir-ng>=1.1.1
    pytest-cov>=2.11.1

[bdist_wheel]
universal=1

[flake8]
ignore =
    # W503: linebreaks relative to binary operators, not really PEP
    W503
